fix review card spacing and centering in homepage

--- a/source/static/homepage.css
+++ b/source/static/homepage.css
@@ -46,6 +46,7 @@ img#create-btn {
     display: flex;
     position: relative;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .review-container > div {
     background-color: #f1f1f1;
